Bug fix: fixed some glitches with: - The main view container (it was glitching when a mobile is in the horizontal view) - The footer: adjusted the look of it on mobiles.

--- a/css/input.css
+++ b/css/input.css
@@ -72,12 +72,13 @@ h1 {
   display: flex;
   flex-direction: column;
   height: 100vh;
+
+  min-height: 40rem;
 }
 
 main {
   flex-grow: 1;
 }
-
 
 /* Hero */
 #hero article {
@@ -89,14 +90,22 @@ main {
 }
 
 @keyframes bounce {
-  0% { transform: translateX(0); }
-  25% { transform: translateX(-20px); }
-  50% { transform: translateX(0); }
-  75% { transform: translateX(20px); }
-  100% { transform: translateX(0); }
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-20px);
+  }
+  50% {
+    transform: translateX(0);
+  }
+  75% {
+    transform: translateX(20px);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
-
-
 
 /* Tech Stack */
 
@@ -105,7 +114,7 @@ main {
   grid-template-columns: repeat(auto-fit, 3rem);
   justify-content: center;
 
- 
+  max-width: 21rem;
 }
 
 @media (min-width: 768px) {
